<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">PViewer</string>
	<string name="action_settings">Settings</string>
	<string name="button_start">Start</string>
	<string name="title_activity_pviewer">PViewer</string>
	<string name="button_settings">Settings</string>
	<string name="title_activity_settings">Settings</string>
	<string name="world_scaling_factor"></string>
	<string name="visualization_frequency">Hz</string>
	<string name="visualization_frequency_value">10</string>
	<string name="label_visualization_frequency">Visualization frequency</string>
	<string name="label_world_x_min">World X Min</string>
	<string name="label_world_x_max">World X Max</string>
	<string name="label_world_y_min">World Y Min</string>
	<string name="label_world_y_max">World Y Max</string>
	<string name="world_x_min_value">21.8</string>
	<string name="world_x_max_value">42.6</string>
	<string name="world_y_min_value">22.9</string>
	<string name="world_y_max_value">45.0</string>
	<string name="button_done">Done</string>
	<string name="blank_1"></string>
	<string name="blank_2"></string>
	<string name="developer_0">PViewer v1.0</string>
	<string name="developer_1">developed by</string>
	<string name="developer_2">Fabio Previtali</string>
</resources>
